<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity">
    <include
        android:id="@+id/appbar_setting"
        layout="@layout/appbar_with_back_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_setting"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            style="@style/TextAppearance.App.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_system"
            android:layout_marginBottom="@dimen/spacing_16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_language"/>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/spacing_16dp">

                <RadioButton
                    android:id="@+id/rad_vietnamese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_language_vietnamese"
                    android:checked="true"/>


                <RadioButton
                    android:id="@+id/rad_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_language_english"/>

            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_dark_mode"
                android:layout_marginBottom="@dimen/spacing_16dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_8dp"
                android:checked="true"/>

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.App.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_account"
            android:layout_marginBottom="@dimen/spacing_16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_change_password"
            android:id="@+id/ChangePasswordTxt"
            android:layout_marginBottom="@dimen/spacing_16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_logout"
            android:id="@+id/LogoutTxt"
            android:layout_marginBottom="@dimen/spacing_16dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>