<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <include
        android:id="@+id/appbar_home"
        layout="@layout/appbar_with_back_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appbar_home">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_profile"
            android:layout_width="@dimen/image_120dp"
            android:layout_height="@dimen/image_120dp"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:layout_marginBottom="@dimen/spacing_16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avarta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_slogan" />


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView">

            <!-- Add your table rows here -->
            <TableRow android:layout_marginBottom="@dimen/spacing_8dp">

                <TextView
                    style="@style/TextAppearance.App.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_lastname" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_Ho_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:enabled="true"
                    android:text="NGUYEN"/>
            </TableRow>
            <TableRow android:layout_marginBottom="@dimen/spacing_8dp">

                <TextView
                    style="@style/TextAppearance.App.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_firstname" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_Ten_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:enabled="true"
                    android:text="CHI THANH"/>
            </TableRow>
            <TableRow android:layout_marginBottom="@dimen/spacing_8dp">

                <TextView
                    style="@style/TextAppearance.App.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_gender" />

                <RadioGroup
                    android:id="@+id/radioGroupGioiTinh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="horizontal">



                    <RadioButton
                        android:id="@+id/RadioButtonNam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_choice_male"
                        android:layout_marginEnd="@dimen/spacing_32dp"/>


                    <RadioButton
                        android:id="@+id/RadioButtonNu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_choice_female"/>

                </RadioGroup>
            </TableRow>
            <TableRow android:layout_marginBottom="@dimen/spacing_8dp">

                <TextView
                    style="@style/TextAppearance.App.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_gmail_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:enabled="false"
                    android:text="thanh.161003@gmail.com"/>
            </TableRow>

        </TableLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit_profile"
            style="@style/PrimaryFilledButton"
            android:layout_width="@dimen/button_width_120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>