<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CreatePlaylistActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_64dp"
            android:paddingStart="@dimen/spacing_16dp"
            android:paddingEnd="@dimen/spacing_16dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ln_recommended_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_24dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_recommendation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_recomendation"
                    style="@style/TextAppearance.App.TitleMedium"/>

                <TextView
                    android:id="@+id/tv_clear_choices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/label_clear_choices"
                    android:textColor="@color/primary"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended_songs"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>



        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_to_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/button_add"
            style="@style/ExtendedFloatingActionButton"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>